# Nen

./: .gitignore  Pitch-deck.md  Project.txt  README.md  cleanup-gi-references.js  generate_pitch_deck.py  main.js  package.json  pitch_deck.pptx  presentation.txt
ai/: __init__.py  config.py  metrics_collector.py
poc-implementation/marketplace-standalone/: Anchor.toml  Cargo.toml  package-lock.json  package.json
poc-implementation/marketplace-standalone/programs/nen-marketplace/: Cargo.toml
poc-implementation/marketplace-standalone/programs/nen-marketplace/src/: lib.rs
poc-implementation/marketplace-standalone/tests/: marketplace.test.ts
poc-implementation/smart-contracts/: ANCHOR_PROGRAMS_TEST_RESULTS.md  Anchor.toml  Cargo.toml  README.md  SIMPLIFIED_FUNCTIONAL_TEST_RESULTS.md  advanced-anchor-test.js  anchor-test-results.json  comprehensive-anchor-test.js  comprehensive-smart-contract-test.js  comprehensive-test-runner.rs  comprehensive-test-validation-report.json  comprehensive-test-validation.js  deployment-test.js  final-validation-summary.json  local-validator-test-report.json  local-validator-test.js  nen-betting-keypair.json  package-lock.json  package.json  program-keypair.json  run-basic-tests.js  run-simple-tests.js  run-tests.js  smart-contract-test-report.json  test-nen-betting-web3.js  test-output-anchor-final-test.txt  test-output-deployment-readiness.txt  test-output-manual-test.txt  test-output-nen-magicblock-working-backup.txt  test-output-nen-marketplace-working-backup.txt  test-output-program-validation.txt  toolchain-issues.md  tsconfig.json  validation-report.json
poc-implementation/smart-contracts/programs/nen-betting/: Cargo.toml
poc-implementation/smart-contracts/programs/nen-betting/src/: lib.rs  lib_clean.rs
poc-implementation/smart-contracts/programs/nen-core/: Cargo.toml
poc-implementation/smart-contracts/programs/nen-core/src/: constants.rs  errors.rs  instructions.rs  lib.rs  lib_minimal.rs  lib_modular.rs  lib_simple.rs  state.rs
poc-implementation/smart-contracts/programs/nen-core/src/modules/: ai_agents.rs  bets.rs  matches.rs  mod.rs  platform.rs  users.rs
poc-implementation/smart-contracts/programs/nen-core/src/state/: bet.rs  match_state.rs  mod.rs  training_session.rs  user.rs
poc-implementation/smart-contracts/programs/nen-magicblock/: Cargo.toml
poc-implementation/smart-contracts/programs/nen-magicblock/src/: bolt_ecs.rs  components.rs  errors.rs  lib.rs  systems.rs
poc-implementation/smart-contracts/programs/nen-magicblock/tests/: enhanced_session_tests.rs  transaction_tests.rs
poc-implementation/smart-contracts/programs/nen-marketplace/: Cargo.toml  README.md
poc-implementation/smart-contracts/programs/nen-marketplace/src/: lib.rs
poc-implementation/smart-contracts/scripts/: comprehensive-test-runner.js  direct-platform-init.js  final-verification.js  generate-test-report.ts  initialize-platform.js  manual-init-guide.js  run-core-initialization-tests.js  setup-test-environment.js  test-frontend-integration.js  test-withdrawal.js  validate-core-init-tests.js  validate-deployment.js  verify-user-story-2-onchain.js
poc-implementation/smart-contracts/src/utils/: performance-profiler.ts
poc-implementation/smart-contracts/test-artifacts/: deployment-validation.json  validation-report.json
poc-implementation/smart-contracts/tests/: README.md  ai_agent_tests.rs  ai_move_tests.rs  anchor-final-test.ts  anchor-integration-test.ts  anchor-proper-test.ts  anchor-test-runner.ts  basic-functionality.test.ts  comprehensive-test-runner.ts  demo-enhanced-match-creation.js  demo-testing-infrastructure.ts  deployment-readiness.test.ts  enhanced_ai_agent_tests.rs  enhanced_move_system_tests.rs  enhanced_piece_tests.rs  enhanced_position_tests.rs  enhanced_session_management_tests.rs  magicblock_integration.rs  manual-test.ts  move_system_tests.rs  nen-betting-advanced.test.ts  nen-betting-comprehensive.test.ts  nen-betting-functional.test.ts  nen-betting-simple.test.ts  nen-betting-working.test.ts  nen-betting.test.ts  nen-core-advanced.test.ts  nen-core-comprehensive.test.ts  nen-core-functional.test.ts  nen-core-simple.test.ts  nen-core-working.test.ts  nen-core.test.ts  nen-magicblock-advanced.test.ts  nen-magicblock-comprehensive.test.ts  nen-magicblock-functional.test.ts  nen-magicblock-simple.test.ts  nen-magicblock-working-backup.test.ts  nen-magicblock-working.test.ts  nen-marketplace-advanced.test.ts  nen-marketplace-comprehensive.test.ts  (+18 more)
poc-implementation/smart-contracts/tests/config/: betting-test-config.ts  comprehensive-test-runner.ts  core-initialization-config.ts  environment-validator.ts  test-config.ts  test-setup.test.ts  test-setup.ts
poc-implementation/smart-contracts/tests/fixtures/: accounts.json  authority-keypair.json  user2-keypair.json
poc-implementation/smart-contracts/tests/integration/: access-control-simplified.test.ts  access-control.test.ts  ai-performance-analytics.test.ts  ai-system-tests.test.ts  betting-workflow.test.ts  e2e-user-journey.test.ts  event-system.test.ts  financial-security-core.test.ts  financial-security-demo.test.ts  financial-security.test.ts  kyc-compliance.test.ts  magicblock-integration-enhanced.test.ts  magicblock-integration.test.ts  monitoring-integration.test.ts  multi-program-integration.test.ts  realtime-performance.test.ts  reentrancy-protection.test.ts  resource-optimization.test.ts  risk-management.test.ts  throughput-testing.test.ts
poc-implementation/smart-contracts/tests/scripts/: validate-betting-tests.js  validate-betting-tests.ts
poc-implementation/smart-contracts/tests/unit/: ai-system.test.ts  betting-system.test.ts  core-initialization.test.ts  enhanced-match-creation.test.ts  enhanced-user-creation.test.ts  match-lifecycle.test.ts  move-validation.test.ts  platform-initialization.test.ts  user-management.test.ts
poc-implementation/smart-contracts/tests/utils/: enhanced-helpers.ts  helpers.ts  mock-data.ts  test-validator.ts
(+1662 files in other folders)
