[package]
name = "nen-magicblock"
version = "0.1.0"
description = "MagicBlock integration for real-time Gungi gameplay"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nen_magicblock"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
borsh = "0.10.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }
solana-sdk = "1.17.0"
solana-program-test = "1.17.0"
solana-logger = "1.17.0"
anyhow = "1.0"
rand = "0.8"
serde_json = "1.0"
env_logger = "0.10"
test-log = "0.2"
