[package]
name = "nen-marketplace"
version = "0.1.0"
description = "Nen Platform Marketplace Program"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "lib"]
name = "nen_marketplace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1" }
## Use only anchor-spl CPIs to avoid global allocator conflicts
